# automata-slsa-sigstore-verifier

./: .env.example  .gitignore  Cargo.toml  README.md
contracts/: .env.example  .gitignore  README.md  foundry.toml
contracts/script/: Config.s.sol  Deploy.s.sol
contracts/script/config/: deployment.toml
contracts/src/: SigstoreAttestationVerifier.sol
contracts/src/interfaces/: ISigstoreAttestationVerifier.sol
contracts/src/zk/pico/: PicoVerifier.sol
crates/risc0/: Cargo.toml  build.rs
crates/risc0-host/: Cargo.toml
crates/risc0-host/src/: main.rs
crates/risc0-host/src/proving/: boundless.rs
crates/risc0/guest/: Cargo.toml
crates/risc0/guest/src/: main.rs
crates/sigstore-verifier/: Cargo.toml  README.md  RFC-3161.md
crates/sigstore-verifier/examples/: verify_bundle.rs  verify_bundle_with_trusted_root.rs
crates/sigstore-verifier/src/: error.rs  lib.rs
crates/sigstore-verifier/src/crypto/: hash.rs  merkle.rs  mod.rs  signature.rs
crates/sigstore-verifier/src/fetcher/: mod.rs  rekor.rs  trust_bundle.rs
crates/sigstore-verifier/src/fetcher/jsonl/: parser.rs  types.rs
crates/sigstore-verifier/src/parser/: bundle.rs  certificate.rs  identity.rs  mod.rs  rfc3161.rs  timestamp.rs
crates/sigstore-verifier/src/types/: bundle.rs  certificate.rs  dsse.rs  mod.rs  result.rs
crates/sigstore-verifier/src/verifier/: certificate.rs  mod.rs  rfc3161.rs  signature.rs  subject.rs  timestamp.rs  transparency.rs
crates/sigstore-verifier/tests/: integration_test.rs  jsonl_test.rs
crates/sigstore-zkvm-traits/src/: lib.rs  traits.rs  types.rs  workflow.rs
crates/sp1-host/: Cargo.toml
crates/sp1-host/src/: cli.rs  config.rs  main.rs  prover.rs
crates/sp1-host/src/proving/: mod.rs  network.rs
crates/sp1/elf/: sigstore-verifier-sp1-elf
crates/zkvm-traits/: Cargo.toml
crates/zkvm-traits/src/: error.rs  lib.rs  types.rs
samples/: actions-attest-build-provenance-attestation-13739985.sigstore.json
website/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vercel.json
website/components/: CodeIntegration.tsx  Footer.tsx  GettingStarted.tsx  GitHubIntegration.tsx  Hero.tsx  Integration.tsx  Navigation.tsx  ProtocolDiagram.tsx  ProtocolOverview.tsx  Specification.tsx  ZkVerification.tsx  ZkVerifierDetails.tsx
website/components/ui/: CodeBlock.tsx  HalftoneMonolith.tsx
