[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://ata.network/"

[workspace.dependencies]
# Hash
sha2 = { version = "0.10.8" }

# ECDSA support
p256 = { version = "0.13" }
p384 = { version = "0.13" }
ecdsa = "0.16"
# RSA support
rsa = { version = "0.9" }