[package]
name = "sp1-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
sp1-sdk = { workspace = true }
sugstore-sp1-methods = { path = "../sp1" }
sigstore-verifier = { path = "../sigstore-verifier" }
sigstore-zkvm-traits = { path = "../sigstore-zkvm-traits" }

# CLI and async
clap = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }

# Utilities
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }
bincode = { workspace = true }
