[package]
name = "sigstore-risc0-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ["std", "unstable"] }
sigstore-verifier = { path = "../../sigstore-verifier" }
sigstore-zkvm-traits = { path = "../../sigstore-zkvm-traits" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.6-risczero.0" }